<resources>
    <string name="app_name">Street Smart</string>

    <string name="errorMsg">Error occurred please try again</string>
    <string name="errorNoCameraMsg">Device has no camera!!!</string>



    <string name="haveFunText">You want to have fun?</string>
    <string name="signInThenText">***Sign in then***</string>
    <string name="signInText">Sign in</string>
    <string name="registrationQuestion">Or, make new account!</string>
    <string name="forgotPasswordQuestionText">Forgot password?</string>
    <string name="forgotPasswordText">Forgot password</string>

    <string name="hintUsername">Enter username</string>
    <string name="hintPassword">Enter password</string>
    <string name="hintConfirmPassword">Confirm password</string>
    <string name="hintPasswordNew">Enter new password</string>
    <string name="hintConfirmPasswordNew">Confirm new password</string>
    <string name="hintFirstName">Enter first name</string>
    <string name="hintLastName">Enter last name</string>
    <string name="hintPhoneNumber">Enter phone number</string>
    <string name="hintEmail">Enter email</string>

    <string name="registrationText">Registration</string>
    <string name="backText">Back</string>
    <string name="finishText">Finish</string>

    <string name="profilePhotoText">Pick profile photo:</string>

    <string name="profileFooterText">Profile</string>
    <string name="mapFooterText">Map</string>
    <string name="friendsFooterText">Friends</string>
    <string name="rankListFooterText">Rank List</string>

    <string name="editText">Edit</string>
    <string name="rankText">Rank</string>
    <string name="questionsTextView">Questions</string>
    <string name="log_outText">Log out</string>
    <string name="active_questionsTextView">Active Questions</string>

    <string name="searchText">Search</string>
    <string name="addNewQuestionText">Add New</string>
    <string name="friendsListText">List of friends:</string>

    <string name="addNewFriendText">Add New Friend</string>

    <string name="tapToChangeText">Tap image to change it</string>
    <string name="title_activity_maps">Map</string>


    <string name="cancelText">Cancel</string>
    <string name="addText">Add</string>
    <string name="finalAnswer">Final Answer</string>
    <string name="distanceText">Set up radius:</string>
    <string name="closeText">Close</string>

    <string name="showAllUsersText">Show all users:</string>


</resources>
