<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/logoColor"
        android:textSize="@dimen/_35sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textHaveFun"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/haveFunText"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/textLogo"
        android:layout_marginTop="@dimen/_20sdp"/>

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/signInThenText"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/textHaveFun"
        android:layout_marginTop="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@+id/textSignIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:hint="@string/hintUsername"
        android:textColorHint="@color/logoColor"
        android:textSize="@dimen/_15sdp"
        android:inputType="textNoSuggestions"/>
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:hint="@string/hintPassword"
        android:textColorHint="@color/logoColor"
        android:textSize="@dimen/_15sdp"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/finishBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/signInText"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@color/finishColor"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPassword"
        app:layout_constraintRight_toRightOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/registrationQuestion"
        android:gravity="center"
        android:textColor="#0992f4"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/finishBtn"
        android:layout_marginTop="@dimen/_20sdp"/>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/forgotPasswordQuestionText"
        android:gravity="center"
        android:textColor="#c2121d"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/registrationText"
        android:layout_marginTop="@dimen/_40sdp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/footerPageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/firstIndicator"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/view_page_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/secondIndicator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>
        <ImageView
            android:id="@+id/secondIndicator"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/view_page_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/thirdIndicator"
            app:layout_constraintLeft_toRightOf="@+id/firstIndicator"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>
        <ImageView
            android:id="@+id/thirdIndicator"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/view_page_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/secondIndicator" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>