<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/logoColor"
        android:textSize="@dimen/_35sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/forgotPasswordText"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/textLogo"
        android:layout_marginTop="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/textRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/hintUsername"
        android:textSize="@dimen/_10sdp"
        android:inputType="textNoSuggestions"/>

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/hintPhoneNumber"
        android:textSize="@dimen/_10sdp"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/enterPasswordEditText"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/hintPasswordNew"
        android:textSize="@dimen/_10sdp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/hintConfirmPasswordNew"
        android:textSize="@dimen/_10sdp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/backBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/backText"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/footerPageView"
        app:layout_constraintRight_toLeftOf="@+id/finishBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/backColor"
        android:layout_marginRight="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_2sdp"/>

    <TextView
        android:id="@+id/finishBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/finishText"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@color/finishColor"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/footerPageView"
        app:layout_constraintLeft_toRightOf="@+id/backBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="2"
        android:layout_marginRight="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_2sdp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/footerPageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/firstIndicator"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/view_page_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/secondIndicator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>
        <ImageView
            android:id="@+id/secondIndicator"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/view_page_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/thirdIndicator"
            app:layout_constraintLeft_toRightOf="@+id/firstIndicator"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>
        <ImageView
            android:id="@+id/thirdIndicator"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/view_page_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/secondIndicator" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>